// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render projects 1`] = `
<section
  className="boxed-group"
>
  <h2>
    my_profile.per_project_notifications.title
  </h2>
  <div
    className="boxed-group-inner"
  >
    <Connect(ProjectNotifications)
      key="foo"
      project={
        Object {
          "key": "foo",
          "name": "Foo",
        }
      }
    />
    <Connect(ProjectNotifications)
      key="bar"
      project={
        Object {
          "key": "bar",
          "name": "Bar",
        }
      }
    />
    <div
      className="spacer-top panel bg-muted"
    >
      <span
        className="text-middle spacer-right"
      >
        my_account.set_notifications_for
        :
      </span>
      <AsyncSelect
        autoload={false}
        cache={false}
        loadOptions={[Function]}
        minimumInput={2}
        name="new_project"
        onChange={[Function]}
        optionRenderer={[Function]}
        placeholder="my_account.search_project"
        style={
          Object {
            "width": "300px",
          }
        }
      />
    </div>
  </div>
</section>
`;

exports[`should render projects 2`] = `
<section
  className="boxed-group"
>
  <h2>
    my_profile.per_project_notifications.title
  </h2>
  <div
    className="boxed-group-inner"
  >
    <Connect(ProjectNotifications)
      key="foo"
      project={
        Object {
          "key": "foo",
          "name": "Foo",
        }
      }
    />
    <Connect(ProjectNotifications)
      key="bar"
      project={
        Object {
          "key": "bar",
          "name": "Bar",
        }
      }
    />
    <Connect(ProjectNotifications)
      key="qux"
      project={
        Object {
          "key": "qux",
          "name": "Qux",
        }
      }
    />
    <div
      className="spacer-top panel bg-muted"
    >
      <span
        className="text-middle spacer-right"
      >
        my_account.set_notifications_for
        :
      </span>
      <AsyncSelect
        autoload={false}
        cache={false}
        loadOptions={[Function]}
        minimumInput={2}
        name="new_project"
        onChange={[Function]}
        optionRenderer={[Function]}
        placeholder="my_account.search_project"
        style={
          Object {
            "width": "300px",
          }
        }
      />
    </div>
  </div>
</section>
`;

exports[`should render projects 3`] = `
<section
  className="boxed-group"
>
  <h2>
    my_profile.per_project_notifications.title
  </h2>
  <div
    className="boxed-group-inner"
  >
    <Connect(ProjectNotifications)
      key="foo"
      project={
        Object {
          "key": "foo",
          "name": "Foo",
        }
      }
    />
    <Connect(ProjectNotifications)
      key="bar"
      project={
        Object {
          "key": "bar",
          "name": "Bar",
        }
      }
    />
    <Connect(ProjectNotifications)
      key="qux"
      project={
        Object {
          "key": "qux",
          "name": "Qux",
        }
      }
    />
    <div
      className="spacer-top panel bg-muted"
    >
      <span
        className="text-middle spacer-right"
      >
        my_account.set_notifications_for
        :
      </span>
      <AsyncSelect
        autoload={false}
        cache={false}
        loadOptions={[Function]}
        minimumInput={2}
        name="new_project"
        onChange={[Function]}
        optionRenderer={[Function]}
        placeholder="my_account.search_project"
        style={
          Object {
            "width": "300px",
          }
        }
      />
    </div>
  </div>
</section>
`;

exports[`should render projects 4`] = `
Object {
  "addedProjects": Array [],
}
`;
